<resources>
    <string name="app_name">GymStrengthBuddy</string>
    <string name="settingsBtn">Settings</string>
    <string name="squatBtn">Squat</string>
    <string name="benchBtn">Benchpress</string>
    <string name="deadliftBtn">Deadlift</string>
    <string name="overheadpressBtn">Overheadpress</string>
    <string name="appName">GymStrengthBuddy</string>
    <string name="settingsHeader">Settings</string>
    <string name="maxSquatText">Max Squat:</string>
    <string name="maxBenchText">Max Bench:</string>
    <string name="maxDeadliftText">Max Deadlift:</string>
    <string name="maxOverheadpressText">Max Overheadpress:</string>
    <string name="submitBtn">Submit</string>
    <string name="day_squat_header">Squat Day</string>
    <string name="day_bench_header">Bench Day</string>
    <string name="table_row_week_1">Week 1</string>
    <string name="tabel_row_week_2">Week 2</string>
    <string name="table_row_week_3">Week 3</string>
    <string name="table_row_week_4">Week 4</string>
    <string name="table_row_set_1">Set 1</string>
    <string name="table_row_set_2">Set 2</string>
    <string name="table_row_set_3">Set 3</string>
    <string name="day_deadlift_header">Deadlift Day</string>
    <string name="day_overheadpress_header">Overheadpress Day</string>
    <string name="day_overhead_header">Press Day</string>
    <string name="workout_name" />
    <string name="supportive1"></string>
    <string name="supportive2" />
    <string name="supportive3" />
    <string name="supportive4"></string>
    <string name="about_5_3_1">5/3/1: HOW TO BUILD PURE STRENGTH</string>
    <string name="text1">Getting good at the core lifts will have a huge carryover into everything else. Start light, progress slowly, and leave out the ego in order to bust PRs.\n\nTrain 3–4 days a week. Center each workout around one of the following: parallel squat, bench press, deadlift, or standing shoulder press.\n\nUse a specific percentage of your one-rep max to lift 5 reps, then 3 reps, then 1 rep. These percentages are based on 90% of your 1RM.\n\nComplement 5/3/1 training with assistance work to build muscle, prevent injury, and create a balanced physique. Options include chin ups, dips, lunges, and back extensions.</string>
    <string name="Jim">by Jim Wendler</string>
    <string name="header1">"Here's what you need to know.."</string>
    <string name="header2">The Reason for 5/3/1</string>
    <string name="text2">"Just so we're clear, either people want to do 5/3/1 or they don't. I really want to help people, but if they won't take my advice there's nothing I can do. That's fine by me. I don't fight the battles. I just don't fucking care.\n\nLook, arguing about strength training theory is stupid. And the reason I came up with 5/3/1 was that I wanted a program that eliminated stupid thoughts from my head and just let me go into the weight room and get shit done.\n\nI've been training for 20 years, and this is what I've learned.\n"</string>
    <string name="header3">"A Powerlifter's progress"</string>
    <string name="text3">"My best powerlifting accomplishment in the 275-pound weight class was a 1,000-pound squat, 675-pound bench press, 700-pound deadlift, and a 2,375 total. No, I wasn't strong at all! Sure, I could waddle up to the monolift and squat, but I couldn't do anything else. Really, all I could do was squat, bench, and deadlift.\n\nToday I have different aspirations. I want to be able to do a bunch of different activities and still kick ass in the weight room. I want to be as mobile, flexible, strong, and in as good a condition as I possibly can. That's how I came up with 5/3/1.\n"</string>
    <string name="header4">Philosophy 5/3/1</string>
    <string name="text4">The core philosophy behind 5/3/1 revolves around the basic tenets of strength training that have stood the test of time.\n</string>
    <string name="header5">Basic Multi-Joint Lifts</string>
    <string name="text5">"The bench press, parallel squat, deadlift, and standing press have been the staples of any strong man's repertoire. Those who ignore these lifts are generally the people who suck at them. If you get good at those, you'll get good at other stuff, as they have such a huge carryover.\n"</string>
    <string name="header6">Starting Light</string>
    <string name="text6">While it may seem counterintuitive to take weight off the bar when the goal is to add weight to it, starting lighter allows you more room to progress forward. This is a very hard pill to swallow for most lifters. They want to start heavy and they want to start now.\n\nThis is nothing more than ego, and nothing will destroy a lifter faster, or for longer, than ego.\n</string>
    <string name="header7">Progress Slowly</string>
    <string name="text7">This ties in with starting light, and it keeps lifters who want to get big and strong yesterday from sabotaging their own progress.\n\nPeople want a program that will add 40 pounds to their bench in eight weeks. When I ask how much their bench went up in the last year, they hang their heads in shame.\n</string>
    <string name="header8">Break Personal Records</string>
    <string name="text8">"5/3/1 is set up to allow you to break a variety of repetition records throughout the year. Notice that it's "rep records" and not "one-rep max." Most people live and die by their one-rep max. To me, this is foolish and short sighted.\n\nIf your squat goes from 225 x 6 to 225 x 9, you've gotten stronger.\n"</string>
    <string name="header9">5/3/1 by the Numbers</string>
    <string name="text9">"In 5/3/1, you're expected to train three or four days a week. Each workout is centered around one core lift – the parallel squat, bench press, deadlift, and standing shoulder press.\n\nEach training cycle lasts four weeks, with these set-rep goals for each major lift:\n"</string>
    <string name="text9_2">"Then you start the next cycle, using heavier weights on the core lifts. And that's where a seemingly simple system starts getting a little more complicated.\n\nYou aren't just picking a weight to lift five times or three times or one time per set. You're using a specific percentage of your one-rep max. And not your full 1RM. The calculations are based on 90% of it.\n\nSo if your 1RM in the bench press is 315 pounds, you use 285 (90%) as the base number for your training-weight calculations. Here's how it works:\n"</string>
    <string name="text9_3">"When you see 5+, 3+, or 1+, that means you do the max reps you can manage with that weight, with the goal of setting a rep record in each workout.\n\nLet's walk through the Week 1 workout for bench press. Using the example above, if your 1RM is 315, you calculate all your percentages from 90% of that max, or 285 pounds.\n\nSo you're using 185 (65% of 285) x 5, 215 x 5, and 240 or 245 x 5 or more. (In my 5/3/1 ebook, I provide detailed lists of weights and percentages so you don't have to carry a calculator with you to the gym.)\n\nAfter you finish the first cycle, you add five pounds to your 1RM calculations for the two upper-body lifts and 10 pounds to your 1RM for the squat and deadlift.\n\nThese specific instructions for 1RM percentages and monthly progression are what set 5/3/1 apart from less useful systems. When I see a program that says three sets of eight reps? That's the stupidest fucking thing ever.\n\nIf it doesn't have a specific percentage based on a specific max, it's useless. That's the hallmark of someone who doesn't understand basic programming.\n"</string>
    <string name="header10">5/3/1 and Discontents</string>
    <string name="text10">"I've received a lot of positive feedback from lifters who used 5/3/1 to overcome plateaus in strength and size development. And it's not just from advanced guys. I received a thank-you from a guy who went from 135 for 1 rep on the bench to 135 for 17.\n\nThe program has also received criticism from lifters on two fronts: that lifters are told to start too light and build too slow.\n\n"Start too light" refers to my insistence that the prescribed loads are calculated off of 90% of the lifter's 1RM. If your 1RM in the bench is 315, why calculate loads off a 1RM of 285?\n\nMy response? People who freak out about the 90% thing are usually weak in the first place. You don't need to operate at your max to increase your max. Why people get so bent out of shape about taking two steps back if it means they'll be taking 10 steps forward is beyond me.\n\nThen there's the "disconnected from reality" problem. Few lifters are willing to acknowledge their true 1RM.\n\nAt one time, I did a seminar every week. Every time, without fail, when I asked someone what their one-rep max was, I'd get this: "Well, about three years ago I hit 365 for a triple, but that was when I was training heavier.." Most guys just don't have a fucking clue.\n\nBy using the 90%, I account for this bullshit. By using weights they can actually handle, guys are building muscle, avoiding burnout, and most importantly, making progress every workout.\n\nNone of this is exactly revolutionary. I learned this in my freshman year. I've always made my best gains when I left just a bit in the tank.\n\nAs for the "build too slow" criticism, people tell me that they don't want to take three months to build up their strength. Where are you going to be in a year? Fuck that, where are you going to be in five years, when you're still benching 205 with your ass halfway off the bench?\n\nThe pursuit of strength is not a six-month or one-year pursuit. It's a 30-year pursuit for me. You've got to be smart about it. But everyone wants everything right now.\n"</string>
    <string name="header11">4 Rookie Mistakes to Avoid</string>
    <string name="text11">"If you're going to try 5/3/1, avoid these four common rookie mistakes.\n"</string>
    <string name="header11_1">"1.Don't customize."</string>
    <string name="text11_1">"This applies to any program published on this site, but it especially matters for 5/3/1. You must do the program the way it's written.\n\nPeople ask the craziest shit. "Can I combine 5/3/1 with Westside for Skinny Bastards?" Why not just do one or the other and make progress?\n\nThese same guys then bitch three months later on some message board that the program didn't work. That's like complaining that your girl got pregnant despite you using a Trojan condom, except you forget to mention you were wearing the condom on your fingers.\n"</string>
    <string name="header11_2">2.Take it easy with the assistance work.</string>
    <string name="text11_2">"Some people look for the magic combination of assistance exercises, and completely under-rate the key lift. I call that majoring in the minors. Assistance work is just that – assistance. Do one or two exercises for five sets of 10, or maybe do a few more exercises for fewer sets. It's assistance. It doesn't fucking matter.\n\nI sometimes just give people a rep number and let them make it up on their own. Say, "push movement: 60 reps," or "pull: 100 reps." It's all just working the muscle.\n"</string>
    <string name="header11_3">3.Start with the right weights.</string>
    <string name="text11_3">"This bears repeating. I don't know how many times people have blown away their PRs because they learn to train with some restraint and actually use weights that they can handle with good form.\n"</string>
    <string name="header11_4">4.Progress slowly.</string>
</resources>