<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ui.WorkoutView">

    <TextView
        android:id="@+id/supportive4"
        android:layout_width="341dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/supportive4"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportive3" />

    <TextView
        android:id="@+id/supportive3"
        android:layout_width="341dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/supportive3"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/supportive4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportive2" />

    <TextView
        android:id="@+id/supportive2"
        android:layout_width="341dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/supportive2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/supportive3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportive1" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="392dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:padding="3dip"
                android:text=""
                android:background="@drawable/my_border" />

            <TextView
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip"
                android:text="@string/table_row_week_1"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip"
                android:text="@string/tabel_row_week_2"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip"
                android:text="@string/table_row_week_3"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip"
                android:text="@string/table_row_week_4"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip"
                android:text="@string/table_row_set_1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/week1set1"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />

            <TextView
                android:id="@+id/week2set1"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />

            <TextView
                android:id="@+id/week3set1"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />

            <TextView
                android:id="@+id/week4set1"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="78.4dp"
                android:layout_height="match_parent"
                android:background="@drawable/my_border"
                android:padding="3dip"
                android:text="@string/table_row_set_2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/week1set2"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />

            <TextView
                android:id="@+id/week2set2"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />

            <TextView
                android:id="@+id/week3set2"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />

            <TextView
                android:id="@+id/week4set2"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="78.4dp"
                android:layout_height="match_parent"
                android:background="@drawable/my_border"
                android:padding="3dip"
                android:text="@string/table_row_set_3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/week1set3"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />

            <TextView
                android:id="@+id/week2set3"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />

            <TextView
                android:id="@+id/week3set3"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />

            <TextView
                android:id="@+id/week4set3"
                android:layout_width="78.4dp"
                android:layout_height="50dp"
                android:background="@drawable/my_border"
                android:padding="3dip" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/workout_name"
        android:layout_width="362dp"
        android:layout_height="88dp"
        android:text="@string/workout_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/supportive1"
        android:layout_width="341dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/supportive1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/supportive2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>